--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+body {
+  background-image: url('./assets/cubes-dark-minimalism-h8.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: courier;
+  font-weight: 900;
+}
+
+h1 {
+  color: snow;
+  text-shadow: 0 0 3px cyan, 0 0 5px lime;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
