--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
   background-image: url('./assets/cubes-dark-minimalism-h8.jpg');
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: auto;
   font-family: courier;
   font-weight: 900;
 }
