--- a/src/components/style.css
+++ b/src/components/style.css
@@ -7,3 +7,9 @@
     top: 3px;
     left: 5px;
 }
+#todo_list {
+    /* transition: width 4s, height 4s, transform 1s; */
+    /* transition-property: all; */
+    transition: width 2s, height 4s, transform 3s;
+}
+
