--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,11 @@ body {
   background-size: auto;
   font-family: courier;
   font-weight: 900;
-}
 
+}
+body::-webkit-scrollbar{
+  display: none;
+}
 h1 {
   color: snow;
   text-shadow: 0 0 3px cyan, 0 0 5px lime;
